@@ -624,15 +624,17 @@ Allows a voting member of a clan to cast a vote on a pending matter.
 
 CLANACCEPT=\
 Command : CLANACCEPT\n\r\
-Usage   : CLANACCEPT ([CLAN NAME]) [MEMBER NAME]\n\r\
+Usage   : CLANACCEPT ([CLAN NAME]) [MEMBER NAME]/ALL\n\r\
 Example : clanaccept bob\n\r\
+Example : clanaccept all\n\r\
 Short(s): \n\r\
 Accept an applicant for membership to your clan.
 
 CLANREJECT=\
 Command : CLANREJECT\n\r\
-Usage   : CLANREJECT ([CLAN NAME]) [MEMBER NAME]\n\r\
+Usage   : CLANREJECT ([CLAN NAME]) [MEMBER NAME]/ALL\n\r\
 Example : clanreject bob\n\r\
+Example : clanreject all\n\r\
 Short(s): \n\r\
 Reject an applicant for membership to your clan.
 
